# directory-indexer

./: .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  codecov.yml  eslint.config.js  index.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
docs/: API.md  CONTRIBUTING.md  DEPENDENCIES.md  design.md  flows.md  implementation.md  parity.md  typescript-design.md
rust-reference/: Cargo.toml
scripts/: README.md  build-all.js  cleanup-act.sh  postinstall.js  pre-push  start-dev-services.sh  stop-dev-services.sh
src/: cli-handlers.ts  cli.ts  config.ts  embedding.ts  environment.rs  error.rs  gitignore.ts  health.rs  indexing.ts  lib.rs  logger.ts  main.rs  mcp-handlers.ts  mcp.ts  path-validation.ts  prerequisites.ts  reset.ts  search.ts  storage.ts  utils.rs  utils.ts
test_data/: ai.txt  rust.txt
tests/: .gitignore  async_concurrency_tests.rs  cli-handlers.test.ts  cli.unit.test.ts  cli_integration_tests.rs  cli_tests.rs  cli_unit_tests.rs  config.unit.test.ts  config_integration_tests.rs  connectivity_tests.rs  delete-index.unit.test.ts  edge-cases.unit.test.ts  error-handling.unit.test.ts  error_scenarios_tests.rs  integration.test.ts  integration_tests.rs  library_integration_tests.rs  mcp-handlers.test.ts  mcp_integration_tests.rs  mcp_tests.rs  path-validation.unit.test.ts  performance_tests.rs  prerequisites.test.ts  providers.unit.test.ts  reset.unit.test.ts  search_integration_tests.rs  storage.unit.test.ts  storage_tests.rs  tests.rs  text-processing.unit.test.ts  unit.test.ts  (+1 more)
(+87 files in other folders)
