[package]
name = "directory-indexer"
version = "0.1.0"
edition = "2021"
description = "AI-powered directory indexing with semantic search for MCP servers"
license = "MIT"
repository = "https://github.com/peteretelej/directory-indexer"
homepage = "https://github.com/peteretelej/directory-indexer"
authors = ["Peter Etelej <peter@etelej.com>"]
keywords = ["mcp", "search", "indexing", "ai", "semantic"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "directory-indexer"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP client for embedding APIs
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# File system operations
walkdir = "2.4"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }

# Configuration
config = "0.14"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging - using standard log crate + env_logger
log = "0.4"
env_logger = "0.11"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true